dbcore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: dbcore
  name: dbcore
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dbcore
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/front_default: "true"
        io.kompose.service: dbcore
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: core
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: admin
            - name: restart
              value: always
          image: postgres
          name: dbcore
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: dibby
      restartPolicy: Always
      volumes:
        - name: dibby
          persistentVolumeClaim:
            claimName: dibby
status: {}
