dbpostgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: dbpostgresql
  name: dbpostgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dbpostgresql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: dbpostgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: testdb
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: admin
            - name: restart
              value: u  nless-stopped
          image: postgres
          name: dbpostgresql
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
